--- a/alpha/cityfusion_admin/templates/cf-admin/report_event_list.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/report_event_list.html
@@ -1,13 +1,19 @@
 {% extends 'cf-admin/base.html' %}
 {% load event_tags %}
 {% load admin_menu %}
+{% load endless %}
+{% load cf_pagination %}
+
+{% block head %}
+    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
+{% endblock %}
 
 {% block page %}
     <div class="tabs-container">
         {% cf_admin_menu "report_event" %}
 
-        <div class="box visible options">            
-            <table>
+        <div class="box visible">            
+            <table class="profile-table" celpadding="0" cellspacing="0">
                 <tr>
                     <th>Event</th>
                     <th>Reporter</th>
@@ -15,6 +21,7 @@
                     <th>Edit</th>
                     <th>Mark as processed</th>
                 </tr>
+                {% paginate 10 reports %}
                 {% for report in reports %}
                 <tr>
                     <td>
@@ -47,6 +54,7 @@
                     </tr>
                 {% endfor %}                
             </table>
+            {% cf_pagination %}
         </div>
     </div>
 {% endblock %}
