--- a/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
+++ b/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
@@ -1,4 +1,5 @@
 {% load endless %}
+{% load cf_pagination %}
 
 {% if campaigns|length %}
     {% paginate 10 campaigns %}
@@ -16,7 +17,9 @@
             </td>
             <td class="action">
                 {% for ad in campaign.advertising_set.all %}
-                    <a href="/media/{{ ad.image }}" class="advertising-image" target="_blank">Preview image</a>({{ ad.views }}/{{ ad.clicks }})
+                    <a href="/media/{{ ad.image }}" class="advertising-image" target="_blank">
+                        {{ ad.ad_type.name }} {{ ad.ad_type.width }}x{{ ad.ad_type.height }}
+                    </a>({{ ad.views }}/{{ ad.clicks }})
                     <a href="{% url 'admin_advertising_remove_ad' ad.id %}" class="danger">Remove ad</a>
                     <br>
                 {% endfor %}
@@ -34,28 +37,8 @@
         </tr>
         {% endfor %}
     </table>
+    {% cf_pagination %}
 
-    {% if pages|length > 1 %}
-        <div class="profile-table-pagination">
-            <span class="pagintation-wrapper">
-                {% get_pages %}
-                {% if pages.current.is_first %}
-                    <span class="prev"></span>            
-                {% else %}
-                    <a class="prev" href="{{ pages.previous.url }}"></a>
-                {% endif %}
-                <span class="page-info">
-                    {{ pages.current }} of {{ pages|length }}
-                </span>
-
-                {% if pages.current.is_last %}
-                    <span class="next"></span>                    
-                {% else %}
-                    <a class="next" href="{{ pages.next.url }}"></a>
-                {% endif %}
-            </span>        
-        </div>
-    {% endif %}
 {% else %}
     <div class="empty">
         <p>You have no ads.</p>
