--- a/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
@@ -4,8 +4,11 @@
 {% load date_formatting %}
 {% load cropping %}
 {% load featured_event %}
+{% load endless %}
+{% load cf_pagination %}
 
 {% block head %}
+    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/modal.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/datepicker.css" rel="stylesheet" type="text/css" />
@@ -22,8 +25,8 @@
     <div class="tabs-container">
         {% cf_admin_menu "admin_featured" %}
 
-        <div class="box visible options">
-            <table>
+        <div class="box visible">
+            <table class="profile-table" celpadding="0" cellspacing="0">
                 <tr>
                     <th>Event</th>
                     <th>Status</th>
@@ -32,6 +35,8 @@
                     <th>Edit</th>
                     <th>Remove</th>
                 </tr>
+
+                {% paginate 10 featured_events %}
                 {% for featured_event in featured_events %}
                 <tr>
                     <td>
@@ -67,6 +72,7 @@
                     </tr>
                 {% endfor %}
             </table>
+            {% cf_pagination %}
         </div>
     </div>
 {% endblock %}
