--- a/alpha/accounts/templates/accounts/_in_the_loop_events_table.html
+++ b/alpha/accounts/templates/accounts/_in_the_loop_events_table.html
@@ -9,7 +9,7 @@
     <div class="entry-info">
         <div class="entry-img-prev">
             {% if event.picture %}
-                <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
+                <img src="{% cropped_thumbnail event.event "cropping" width=60 %}" height="60px" weight="60px">
             {% else %}
                 <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
             {% endif %}
@@ -17,7 +17,7 @@
         <div class="entry-details-wrapper">
             <div class="title">
                 <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
-                    {{event.name}}&nbsp;
+                    {{ event.name }}
                 </a>                    
             </div>
             <div class="entry-date">
