--- a/alpha/accounts/templates/venue_accounts/private_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/private_venue_account.html
@@ -173,7 +173,7 @@
                         <header class="block-header">
                             About Us
                         </header>
-                        {{ venue_account.about }}
+                        {{ venue_account.about|safe }}
                     </div>
                 {% endif %}
             </div>            
