Add additional advertising on event detail page

--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -257,8 +257,8 @@
 
 {% block advertising %}
     <div class="advertising-right-container">
-        <div class="advertising-right">
-            {% advertising "300x250" %}
+        <div class="advertising-right-container">
+            {% advertising_group "300x250|300x100" %}        
         </div>
     </div>
 {% endblock %}
