Add deactivate button for featured event in cf-admin interface

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-featured-events.html
@@ -44,7 +44,7 @@
                     </td>
                     <td>
                         {% if featured_event.active %}
-                            On
+                            On(<a href="{% url "admin_deactivate_featured" featured_event.id %}">Deactivate</a>)
                         {% else %}
                             Off(<a href="{% url "admin_activate_featured" featured_event.id %}">Activate</a>)
                         {% endif %}
