--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -3,14 +3,26 @@
 {% load admin_menu %}
 
 {% block page %}
+    <script src="{{STATIC_URL}}js/event/search_by_location.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/actions/import-facebook-events.js" type="text/javascript"></script>
     <div class="tabs-container">
         {% cf_admin_menu "import_facebook_events" %}
 
         <div class="box visible options">
             <div class="form-block">
-                <input data-id="place_input" type="text" />
-                <input data-id="search_button" type="button" value="Search" />
+                <div class="menu-wrapper">
+                    <div class="location-selection-wrapper">
+                        <div class="location-text-box">
+                            <input data-city="" type="text" name="location" class="location" value="" placeholder="{{ user_location.user_location_name }}" autocomplete="off">
+                        </div>
+                        <div class="search-lists">
+                            <ul>
+                                <h3>Pick a Location</h3>
+                            </ul>
+                        </div>
+                    </div>
+                    <input class="events-search-button" data-id="search_button" type="button" value="Search" />
+                </div>
                 {% csrf_token %}
                 <div class="indicator-block" data-id="indicator_block">
                     <img src="{{ STATIC_URL }}images/ajax-loader.gif"/>
