--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -2,14 +2,93 @@
 {% load event_tags %}
 {% load admin_menu %}
 
-{% block page %}
+{% block head %}
+    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/description.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/tagspopup.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/suggest.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
+
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
+
+    <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/event/search_by_location.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tags.popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/location/jquery.geocomplete.js"></script>
+    <script src="{{STATIC_URL}}js/location/suggest_map.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/location/suggest_form.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/location/venue_autocomplete.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/actions/import-facebook-events.js" type="text/javascript"></script>
+    <!-- end time -->
+    {{ form.map }}
+    {{ form.media.js }}
+    <script type="text/javascript">
+        var crsf_token = "{{ csrf_token }}";
+        {% if location %}
+            window.user_lat = {{location.0}};
+            window.user_lng = {{location.1}};
+        {% endif %}
+    </script>
+{% endblock %}
+
+{% block page %}
     <div class="tabs-container">
         {% cf_admin_menu "import_facebook_events" %}
 
         <div class="box visible options">
             <div class="form-block">
+                <div data-id="location_layer" class="location-background">
+                    <div class="location-dialog">
+                        <table>
+                            <tr class="location-tr">
+                                <td>
+                                    Location
+                                </td>
+                                <td>
+                                    <div class="location">{{ form.place }}</div>
+                                    <div class="show-map"></div>
+                                    <div class="suggest">
+                                        <div class="error">
+                                            All fields is required
+                                        </div>
+                                        <table>
+                                            <tr>
+                                                <td>Venue name</td>
+                                                <td>{{form.venue_name}}</td>
+                                            </tr>
+                                            <tr>
+                                                <td>Street address</td>
+                                                <td>{{form.street}}</td>
+                                            </tr>
+                                            <tr>
+                                                <td>City</td>
+                                                <td>
+                                                    {{form.city}}
+                                                    {{form.city_identifier}}
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>Location</td>
+                                                <td>
+                                                    <div class="location_map">{{form.location}}</div>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <div class="cancel-button">Cancel</div>
+                                        <div class="reset-button">Clear</div>
+                                        <div class="submit-button">Submit</div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                        <div class="location-layer-buttons">
+                            <input data-id="location_button_ok" type="button" value="Ok" />
+                            <input data-id="location_button_cancel" type="button" value="Cancel" />
+                        </div>
+                    </div>
+                </div>
                 <div class="menu-wrapper">
                     <div class="location-selection-wrapper">
                         <div class="location-text-box">
