--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -846,3 +846,31 @@ a {
     border-color: #eed3d7;
     color: #b94a48;
 }
+
+.location-background {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: url(/static/images/opacity_bg.png) repeat scroll left top transparent;
+    z-index: 100;
+}
+
+.location-dialog {
+    width: 424px;
+    height: 100px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -58px 0 0 -217px;
+    background: #ffffff;
+    padding: 15px 0 0 10px;
+    border-radius: 8px;
+}
+
+.location-layer-buttons {
+    width: 120px;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 15px;
+}
