--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -102,6 +102,7 @@
                     </div>
                     <input class="events-search-button" data-id="search_button" type="button" value="Search" />
                 </div>
+                <input type="hidden" data-id="city_id" value="" />
                 {% csrf_token %}
                 <div class="indicator-block" data-id="indicator_block">
                     <img src="{{ STATIC_URL }}images/ajax-loader.gif"/>
