--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -8,18 +8,19 @@
     <link href="{{STATIC_URL}}styles/description.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/tagspopup.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/suggest.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/select2.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
 
-    <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/event/search_by_location.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/tags.popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/location/jquery.geocomplete.js"></script>
     <script src="{{STATIC_URL}}js/location/suggest_map.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/location/suggest_form.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/location/venue_autocomplete.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/select2.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/actions/import-facebook-events.js" type="text/javascript"></script>
     <!-- end time -->
     {{ form.map }}
@@ -38,7 +39,7 @@
         {% cf_admin_menu "import_facebook_events" %}
 
         <div class="box visible options">
-            <div class="form-block">
+            <div class="form-block" data-id="form_block">
                 <div data-id="location_layer" class="location-background">
                     <div class="location-dialog">
                         <table>
@@ -88,25 +89,18 @@
                             <input data-id="location_button_cancel" type="button" value="Cancel" />
                         </div>
                     </div>
-                </div>
-                <div class="menu-wrapper">
-                    <div class="location-selection-wrapper">
-                        <div class="location-text-box">
-                            <input data-city="" type="text" name="location" class="location" value="" placeholder="{{ user_location.user_location_name }}" autocomplete="off">
-                        </div>
-                        <div class="search-lists">
-                            <ul>
-                                <h3>Pick a Location</h3>
-                            </ul>
-                        </div>
-                    </div>
+                </div>                
+                <p>
+                    <input data-ajax-url="{% url 'admin_location_autocomplete' %}" type="hidden" class="bigdrop city-input" data-id="city_input" value=""/>
                     <input class="events-search-button" data-id="search_button" type="button" value="Search" />
-                </div>
+                </p>
                 <input type="hidden" data-id="city_id" value="" />
+                <input type="hidden" data-id="city_name" value="" />
                 {% csrf_token %}
                 <div class="indicator-block" data-id="indicator_block">
                     <img src="{{ STATIC_URL }}images/ajax-loader.gif"/>
                 </div>
+                <img class="mini-indicator" data-id="mini_indicator" src="{{ STATIC_URL }}images/mini-ajax-loader.gif" />
             </div>
             <div>
                 <div class="entry-wrapper" data-id="facebook_events_list" data-load-url="{% url 'load_facebook_events' %}" data-create-url="{% url 'event_create_from_facebook' %}" data-reject-url={% url 'reject_facebook_event' %}></div>
