--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -809,6 +809,11 @@ a {
     padding-top: 10px;
 }
 
+.mini-indicator {
+	display: none;
+	vertical-align: middle;
+}
+
 .box .form-block {
     padding-left: 8px;
 }
@@ -827,6 +832,10 @@ a {
 
 .events-search-button {
     margin-top: 10px;
+}
+
+.city-input {
+	width: 300px;
 }
 
 .alert-success, .alert-error {
