--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -45,7 +45,7 @@
                         <table>
                             <tr class="location-tr">
                                 <td>
-                                    Location
+                                    Venue
                                 </td>
                                 <td>
                                     <div class="location">{{ form.place }}</div>
