making 'suggest a new venue' to be accessible always

--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -179,7 +179,7 @@
                         </tr>
                         <tr class="location-tr">
                             <td>
-                                Location
+                                Venue
                                 <a href="javascript:void;"  class="balloon">
                                     <div class="buttonq"></div>
                                 </a>
