making functionality for editing tags and tickets uri in facebook import

--- a/alpha/cityfusion_admin/templates/cf-admin/base.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/base.html
@@ -33,6 +33,7 @@
     {% block head %}{% endblock %}    
 </head>
 <body class="modern">
+{% block body_start %}{% endblock body_start %}
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
