--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -160,7 +160,7 @@
                         </tr>
                         <tr>
                             <td>
-                                Owner
+                                Event Owner
                                 <a href="javascript:void;"  class="balloon">
                                     <div class="buttonq"></div>
                                 </a>
