bit words replacing

--- a/alpha/accounts/templates/userena/profile_form.html
+++ b/alpha/accounts/templates/userena/profile_form.html
@@ -78,7 +78,7 @@
                 </tr>
                 <tr class="native-region-tr">
                     <td>
-                        <label for="id_native_region">Native region:</label>
+                        <label for="id_native_region">Province or Territory:</label>
                     </td>
                     <td>
                         {{form.native_region}}
