--- a/alpha/cityfusion_admin/templates/cf-admin/posting_to_facebook.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/posting_to_facebook.html
@@ -9,36 +9,60 @@
 
 {% block head %}
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/modal.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/datepicker.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse/featured_events.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/featured/setup.css" rel="stylesheet" type="text/css" />
-    
-    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js"></script>
-    <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/featured/setup-page.js" type="text/javascript"></script>
-
+    <script src="{{STATIC_URL}}js/actions/posting-to-facebook.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block page %}
     <div class="tabs-container">
         {% cf_admin_menu "posting_to_facebook" %}
 
-        <div class="box visible">
+        <div class="box visible" data-id="posting_box" data-posting-url="{% url "post_event_to_facebook" %}">
+            {% csrf_token %}
+            <img class="mini-indicator" data-id="mini_indicator" src="{{ STATIC_URL }}images/mini-ajax-loader.gif" />
             <table class="profile-table" celpadding="0" cellspacing="0">
                 <tr>
                     <th>Event</th>
-                    <th>Status</th>
                     <th>Owned by</th>
                     <th>From-To</th>
-                    <th>Edit</th>
-                    <th>Remove</th>
+                    <th>Is posted</th>
+                    <th>Action / Link to FB event</th>
                 </tr>
-
-
+                {% paginate 10 events %}
+                {% for event in events %}
+                    <tr data-type="posting_tr">
+                        <td>{{ event.name }}</td>
+                        <td>
+                            {% if event.owner %}
+                                <a href="{% url "admin:accounts_account_change" event.owner.id %}" target="_blank">{{ event.owner.username }}</a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {{ event.start_time|date:"b d, Y"|title }} - {{ event.end_time|date:"b d, Y"|title }}
+                        </td>
+                        <td data-type="posting_status">
+                            {% if event.is_fb_posted %}
+                                Yes
+                            {% else %}
+                                No
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if not event.is_fb_posted %}
+                                <a href="javascript:void(0);" data-event-id="{{ event.id }}" data-type="posting_link">Post to Facebook</a>
+                            {% else %}
+                                <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/">FB event link</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% empty %}
+                    <tr>
+                        <td colspan="4">
+                            No events for posting was found
+                        </td>
+                    </tr>
+                {% endfor %}
             </table>
-
+            {% cf_pagination %}
         </div>
     </div>
 {% endblock %}
