show errors in modal window

--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -35,8 +35,8 @@
 {% endblock %}
 
 {% block body_start %}
-    <div data-id="location_layer" class="location-background">
-        <div class="location-dialog">
+    <div data-id="location_layer" class="modal-background">
+        <div class="modal-dialog">
             <table>
                 <tr class="location-tr" data-id="location_tr">
                     <td>
@@ -101,7 +101,7 @@
                     </td>
                 </tr>
             </table>
-            <div class="location-layer-buttons">
+            <div class="modal-layer-buttons">
                 <input data-id="location_button_ok" type="button" value="Ok" />
                 <input data-id="location_button_cancel" type="button" value="Cancel" />
             </div>
