--- a/alpha/cityfusion_admin/templates/cf-admin/posting_to_facebook.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/posting_to_facebook.html
@@ -1,9 +1,6 @@
 {% extends 'cf-admin/base.html' %}
-{% load event_tags %}
 {% load admin_menu %}
 {% load date_formatting %}
-{% load cropping %}
-{% load featured_event %}
 {% load endless %}
 {% load cf_pagination %}
 
@@ -11,6 +8,17 @@
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
     <script src="{{STATIC_URL}}js/actions/posting-to-facebook.js" type="text/javascript"></script>
 {% endblock %}
+
+{% block body_start %}
+    <div data-id="modal_layer" class="modal-background">
+        <div class="modal-dialog">
+            <div data-id="modal-text" class="modal-text"></div>
+            <div class="modal-layer-buttons">
+                <input data-id="modal_button_ok" type="button" value="Ok" />
+            </div>
+        </div>
+    </div>
+{% endblock body_start %}
 
 {% block page %}
     <div class="tabs-container">
@@ -33,9 +41,9 @@
                         <td>
                             {{ event.name }}
                             <div>
-                                <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">View</a>
+                                <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" target="_blank">View</a>
                                 |
-                                <a href="{% url 'event_edit' event.authentication_key %}">Edit</a>
+                                <a href="{% url 'event_edit' event.authentication_key %}" target="_blank">Edit</a>
                             </div>
                         </td>
                         <td>
@@ -57,7 +65,7 @@
                             {% if not event.is_fb_posted %}
                                 <a href="javascript:void(0);" data-event-id="{{ event.id }}" data-type="posting_link">Post to Facebook</a>
                             {% else %}
-                                <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/">FB event link</a>
+                                <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/" target="_blank">FB event link</a>
                             {% endif %}
                         </td>
                     </tr>
